# spectrumizer

./: .gitignore  LICENSE  LICENSING.md  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: index.html
docs/audio/: arps.pt3  arps.sna  arps7.pt3  arps7.sna  buzzer-tone.pt3  buzzer-tone.sna  buzzer.pt3  buzzer.sna  chiptune-equal.pt3  chiptune-flat.pt3  chiptune-flat.sna  chiptune-mono.pt3  chiptune.pt3  chiptune.sna  combo.pt3  combo.sna  drums.pt3  drums.sna  echo.pt3  echo.sna  faithful.pt3  faithful.sna  vibrato.pt3  vibrato.sna
examples/: bass-groove.mid  greensleeves.mid  korobeiniki.mid  make_demos.py  make_example_midi.py  ode-to-joy.mid  pachelbel-canon.mid
spectrumizer/: __init__.py  __main__.py  audio.py  cli.py  export.py  ir.py  play.py
spectrumizer/arrange/: __init__.py  chords.py  embellish.py  model.py  quantize.py  reduce.py
spectrumizer/inputs/: __init__.py  midi.py  musicxml.py
spectrumizer/pack/: __init__.py  pt3player.asm
spectrumizer/pt3/: __init__.py  encode.py  ornaments.py  player.py  samples.py  writer.py
tests/: test_arrange.py  test_chords.py  test_cli.py  test_export.py  test_midi.py  test_pack.py  test_player.py  test_pt3_writer.py
tools/: make_social_preview.py
